# smartbrief

./: README.md  flake.nix  pyproject.toml
.github/workflows/: daily.yml
docs/: TECHNICAL_DETAILS.md
src/: main.py  settings.py
src/agents/: analyst.py
src/collectors/: finance.py  news.py  trends.py
src/core/: mailer.py
src/templates/: email.html  email.mjml
src/visualizers/: charts.py
tests/: test_agents.py  test_trends.py  test_visualizers.py
