[project]
name = "smartbrief"
version = "0.1.0"
description = "Send brief to email with Material You Design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "google-genai>=1.56.0",
    "jinja2>=3.1.6",
    "mjml>=0.12.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yfinance>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
